Добавлена библиотека cxxopts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,5 @@ add_subdirectory(libs)
 add_subdirectory(src)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
+
+target_link_libraries(${PROJECT_NAME} PUBLIC cxxopts)
