--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/cxxopts"]
 	path = libs/cxxopts
 	url = https://github.com/jarro2783/cxxopts.git
+[submodule "libs/restclient-cpp"]
+	path = libs/restclient-cpp
+	url = https://github.com/mrtazz/restclient-cpp.git
