--- a/src/NetworkApi/CMakeLists.txt
+++ b/src/NetworkApi/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_library(${PROJECT_NAME} STATIC NetworkApi.cpp NetworkApi.h)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC restclient-cpp)
+target_link_libraries(${PROJECT_NAME} PUBLIC base64)
+target_link_libraries(${PROJECT_NAME} PUBLIC jsoncpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
