--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_subdirectory(libs)
 add_subdirectory(src)
 
-add_executable(${PROJECT_NAME} src/main.cpp ../../Загрузки/SingletonTemplate/main.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC cxxopts)
 target_link_libraries(${PROJECT_NAME} PUBLIC App)
