--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.23)
-project(PacketManagerClient)
+project(PacketManagerClient VERSION 0.0.1)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -15,3 +15,4 @@ target_link_libraries(${PROJECT_NAME} PUBLIC cxxopts)
 target_link_libraries(${PROJECT_NAME} PUBLIC App)
 target_link_libraries(${PROJECT_NAME} PUBLIC NetworkApi)
 target_link_libraries(${PROJECT_NAME} PUBLIC ZLIB::ZLIB)
+target_link_libraries(${PROJECT_NAME} PUBLIC metadata)
