--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(App)
 add_subdirectory(NetworkApi)
 add_subdirectory(Utils)
 add_subdirectory(metadata)
+add_subdirectory(filereader)
